--- a/requirements.yml
+++ b/requirements.yml
@@ -7,7 +7,10 @@ dependencies:
   - shiny
   - chess
   - pandas
+  - plotly
   - pydantic
   - pytest
+  - shinywidgets
+  - anywidget
   - pip:
     - shinyswatch==0.9.0
